fix(docsearch): increase contrast for hits in dark mode

--- a/website/src/css/discordjs.scss
+++ b/website/src/css/discordjs.scss
@@ -79,7 +79,7 @@
 	--docsearch-searchbox-focus-background: var(--ifm-color-black);
 	/* Hit */
 	--docsearch-hit-color: var(--ifm-font-color-base);
-	--docsearch-hit-active-color: var(--ifm-color-white);
+	--docsearch-hit-active-color: var(--ifm-color-primary-contrast-background);
 	--docsearch-hit-background: var(--ifm-color-emphasis-100);
 	/* Footer */
 	--docsearch-footer-background: var(--ifm-background-surface-color);
